web-app-test_uploading repo
Book Search Engine in Angular. Committed all the files to the master branch.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    font-family: "Noto Sans KR", Helvetica, sans-serif;
+    
+}
+
+.custom2 {
+    color: #FF5B3A;
+    font-weight: 900;
+    font-size: 50px;
+}
+
